--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,6 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-project.xcworkspace
-ios/Pods/
 
 # Android/IntelliJ
 #
@@ -40,7 +38,8 @@ yarn-error.log
 # BUCK
 buck-out/
 \.buckd/
-# *.keystore
+*.keystore
+!debug.keystore
 
 # fastlane
 #
@@ -56,5 +55,5 @@ buck-out/
 # Bundle artifact
 *.jsbundle
 
-# Rect Tools
-.vscode/.react/
+# CocoaPods
+/ios/Pods/
