--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "i18n-js": "^3.3.0",
+    "i18next": "^19.4.5",
     "react": "16.11.0",
+    "react-i18next": "^11.5.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-localize": "^1.2.1",
     "react-native-reanimated": "^2.0.0-alpha.5",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
