--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "react-i18next": "^11.5.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^1.2.1",
+    "react-native-material-dropdown-v2": "^0.11.1",
+    "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^2.0.0-alpha.5",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
+    "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
