--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.9.0",
     "i18n-js": "^3.3.0",
     "i18next": "^19.4.5",
+    "lodash": "^4.17.20",
     "react": "16.11.0",
     "react-i18next": "^11.5.0",
     "react-native": "0.62.2",
@@ -28,10 +29,12 @@
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-vector-icons": "^7.0.0",
+    "redux-devtools-extension": "^2.13.8",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reduxsauce": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
